# nova-wallet-android-releases

./: NOTICE  README.md  makefile  pyproject.toml
.github/workflows/: publish-release.yml  update-entrypoint.yml
.github/workflows/make-pull-request/: action.yml
scripts/: fetch_comment_body.py  version_updater.py
updates/changelogs/dev/: 5_2_0.md  5_2_1.md  5_3_0.md  5_3_1.md
updates/changelogs/release/: 10_0_0.md  10_0_2.md  10_1_0.md  10_1_1.md  10_1_2.md  10_1_3.md  10_1_4.md  10_1_5.md  10_2_0.md  10_3_0.md  10_3_1.md  10_3_2.md  10_4_0.md  10_4_1.md  10_4_2.md  10_4_3.md  10_5_0.md  10_5_1.md  10_5_2.md  10_7_1.md  10_7_2.md  10_8_0.md  10_8_4.md  10_8_5.md  3.2.1.md  3_2_1.md  5_2_0.md  5_4_0.md  6_0_0.md  6_0_2.md  6_7_1.md  6_7_3.md  7_0_0.md  7_0_1.md  7_10_0.md  7_10_1.md  7_11_0.md  7_11_1.md  7_11_2.md  7_12.md  (+67 more)
updates/v1/: entrypoint_dev.json  entrypoint_release.json
